Added word2vec, results

--- a/OntologyEnrichment-Survey/CPankow.ipynb
+++ b/OntologyEnrichment-Survey/CPankow.ipynb
@@ -18,7 +18,10 @@
     "import requests, re, urllib, warnings, operator\n",
     "from urllib.parse import urlparse\n",
     "from urllib.error import HTTPError\n",
-    "from nltk.corpus import wordnet as wn"
+    "from nltk.corpus import wordnet as wn\n",
+    "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
+    "\n",
+    "model = Doc2Vec.load(\"/Users/vivek/doc2vec/doc2vec.bin\")"
    ]
   },
   {
@@ -46,22 +49,36 @@
     "    return True\n",
     "\n",
     "def scrapeGoogleForAbstracts(query, count):\n",
+    "    global request\n",
     "    words = query.split()\n",
     "    q = (\"+\").join(words)\n",
     "    print (q)\n",
-    "    gurl = \"https://www.google.co.in/search?q=\\\"\" + q + \"\\\"\"\n",
-    "    data = requests.get(gurl).text\n",
+    "    query_url_goog = \"https://www.google.co.in/search?q=\\\"\" + q + \"\\\"\"\n",
+    "    \n",
+    "    request += 1\n",
+    "    print (\"Making request \", request)\n",
+    "    try:\n",
+    "        data = requests.get(query_url_goog).text\n",
+    "    except Exception as e:\n",
+    "        print (e)\n",
+    "        return\n",
+    "    if \"detected unusual traffic\" in data.lower():\n",
+    "        print (\"Rate limited\")\n",
+    "        return\n",
+    "    time.sleep(sleepingTime)\n",
+    "#     print (data)\n",
     "    soup = BeautifulSoup(data, \"lxml\")\n",
-    "    h3Rows = soup.find_all(\"h3\", {\"class\":\"r\"})\n",
-    "    spanRows = soup.find_all(\"span\", {\"class\":\"st\"})\n",
-    "    zippedRows = zip(h3Rows,spanRows)\n",
-    "\n",
+    "    h3Rows = [el for el in soup.find_all(\"div\", {\"class\":\"BNeawe s3v9rd AP7Wnd\"}) if el.find(\"div\", {\"class\":\"BNeawe s3v9rd AP7Wnd\"})]\n",
+    "    spanRows = [el for el in soup.find_all(\"div\", {\"class\":\"kCrYT\"}) if el.find(\"a\")]\n",
+    "    extra = len(spanRows) - len(h3Rows)\n",
+    "    spanRows2 = spanRows[extra:]\n",
+    "    zippedRows = zip(spanRows2,h3Rows)\n",
     "    urls = []\n",
+    "#     print (list(zippedRows))\n",
     "    for zippedRow in zippedRows:\n",
     "        try:\n",
     "            h3Row = zippedRow[0]\n",
     "            url = h3Row.find(\"a\")['href']\n",
-    "            title = h3Row.text\n",
     "            if(url.split(\"?\")[0]==\"/search\"):\n",
     "                continue\n",
     "        except (GeneratorExit, KeyboardInterrupt, SystemExit):\n",
@@ -69,7 +86,6 @@
     "        except:\n",
     "            continue\n",
     "        par = urllib.parse.parse_qs(urlparse(url).query)\n",
-    "        print (\"par\",par)\n",
     "        try:\n",
     "            appendingURL = par['q'][0]\n",
     "        except:\n",
@@ -81,24 +97,40 @@
     "        for bElem in allbElems:\n",
     "            if bElem.string[0].isalnum():\n",
     "                matchedQuery = bElem.string\n",
-    "        urls.append((matchedQuery,appendingURL,title))\n",
+    "        urls.append((matchedQuery,appendingURL))\n",
+    "    \n",
     "    i = 1\n",
     "    same = 0\n",
     "    prev = 0\n",
+    "    jj = 0\n",
+    "    exceptiontime = 0\n",
     "    while(len(urls)<count):\n",
-    "        # print (len(urls),number)\n",
-    "        tempurl = gurl+ \"&start=\" +str(i*10)\n",
+    "#         print (\"Query: \",query)\n",
+    "        tempurl = query_url_goog + \"&start=\" +str(i*10)\n",
     "        i+=1\n",
-    "        data = requests.get(tempurl).text\n",
+    "\n",
+    "        request += 1\n",
+    "        print (\"Making request \", request)\n",
+    "        try:\n",
+    "            data = requests.get(tempurl).text\n",
+    "            exceptiontime = 0\n",
+    "        except Exception as e:\n",
+    "            print (e)\n",
+    "            exceptiontime += 1\n",
+    "            if exceptiontime > 3:\n",
+    "                break\n",
+    "            continue\n",
+    "        time.sleep(sleepingTime)\n",
     "        soup = BeautifulSoup(data, \"lxml\")\n",
-    "        h3Rows = soup.find_all(\"h3\", {\"class\":\"r\"})\n",
-    "        spanRows = soup.find_all(\"span\", {\"class\":\"st\"})\n",
-    "        zippedRows = zip(h3Rows,spanRows)\n",
+    "        h3Rows = [el for el in soup.find_all(\"div\", {\"class\":\"BNeawe s3v9rd AP7Wnd\"}) if el.find(\"div\", {\"class\":\"BNeawe s3v9rd AP7Wnd\"})]\n",
+    "        spanRows = [el for el in soup.find_all(\"div\", {\"class\":\"kCrYT\"}) if el.find(\"a\")]\n",
+    "        extra = len(spanRows) - len(h3Rows)\n",
+    "        spanRows2 = spanRows[extra:]\n",
+    "        zippedRows = zip(spanRows2, h3Rows)\n",
     "        for (j,zippedRow) in enumerate(zippedRows):\n",
     "            try:\n",
     "                h3Row = zippedRow[0]\n",
     "                url = h3Row.find(\"a\")['href']\n",
-    "                title = h3Row.text\n",
     "            except (GeneratorExit, KeyboardInterrupt, SystemExit):\n",
     "                raise\n",
     "            except:\n",
@@ -113,7 +145,7 @@
     "                for bElem in allbElems:\n",
     "                    if bElem.string[0].isalnum():\n",
     "                        matchedQuery = bElem.string\n",
-    "                urls.append((matchedQuery, appendingURL, title))\n",
+    "                urls.append((matchedQuery, appendingURL))\n",
     "            except (GeneratorExit, KeyboardInterrupt, SystemExit):\n",
     "                raise\n",
     "            except:\n",
@@ -165,7 +197,7 @@
     "    return inputText\n",
     "\n",
     "def getAbstracts(query, count):\n",
-    "    urls = scrapeGoogleForAbstracts(query, 10)\n",
+    "    urls = scrapeGoogleForAbstracts(query, 5)\n",
     "    # print (\"lenght\",len(urls))\n",
     "    texts = []\n",
     "    for (q,url,title) in urls:\n",
@@ -237,31 +269,10 @@
     "    return text\n",
     "\n",
     "def simDoc(text1, text2):\n",
-    "    word_set = set(text1).union(set(text2))\n",
-    "\n",
-    "    freqd_text1 = FreqDist(text1)\n",
-    "    text1_count_dict = dict.fromkeys(word_set, 0)\n",
-    "    for word in text1:\n",
-    "        text1_count_dict[word] = freqd_text1[word]\n",
-    "\n",
-    "    freqd_text2 = FreqDist(text2)\n",
-    "    text2_count_dict = dict.fromkeys(word_set, 0)\n",
-    "    for word in text2:\n",
-    "        text2_count_dict[word] = freqd_text2[word]\n",
-    "\n",
-    "    taggeddocs = []\n",
-    "    doc1 = TaggedDocument(words = text1, tags = [u'NEWS_1'])\n",
-    "    taggeddocs.append(doc1)\n",
-    "    doc2 = TaggedDocument(words = text2, tags = [u'NEWS_2'])\n",
-    "    taggeddocs.append(doc2)\n",
-    "\n",
-    "    #build the modwl\n",
-    "    model = Doc2Vec(taggeddocs, dm =0, alpha=0.025, vector_size=20, min_alpha=0.025, min_count=0)\n",
-    "\n",
-    "    model.train(taggeddocs, epochs=model.iter, total_examples=model.corpus_count)\n",
-    "    print (\"FF\",len(text1),len(text2))\n",
-    "    similarity = model.n_similarity(text1, text2)\n",
-    "    return similarity"
+    "    f1 = text1.split()\n",
+    "    f2 = text2.split()\n",
+    "    sim = model.docvecs.similarity_unseen_docs(model, f1, f2, steps=100)\n",
+    "    return sim\n"
    ]
   },
   {
@@ -1715,7 +1726,7 @@
     "\n",
     "def main(text, threshold):\n",
     "#     instances = getInstances(text)\n",
-    "    instances = [\"pizzas\", \"pizza toppings\"]\n",
+    "    instances = [l.strip() for l in open(\"../../HypeNET/concepts_pizza_relevant2.txt\",\"r\").read().split(\"\\n\")]\n",
     "    finalList = []\n",
     "    for instance in instances:\n",
     "        #Add Code for iterating through patterns and clues here\n",
