Tensor converting inp to embeddings

--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -352,24 +352,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([{((0, 0, 0, 0),): 1}, {((0, 0, 0, 0),): 1}, {((0, 0, 0, 0),): 1},\n",
-       "       ..., {((0, 0, 0, 0),): 1}, {((0, 0, 0, 0),): 1},\n",
-       "       {((0, 0, 0, 0),): 1}], dtype=object)"
+       "tensor([[2.]])"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_train"
+    "torch.Tensor([[2]])"
    ]
   },
   {
