--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -211,11 +211,11 @@
     "            return cache[path] * count\n",
     "        lstm_inp = []\n",
     "        for edge in path:\n",
-    "            word_embed = self.dropout_layer(self.word_embeddings([[edge[0]]]))\n",
-    "            pos_embed = self.dropout_layer(self.pos_embeddings([[edge[1]]]))\n",
-    "            dep_embed = self.dropout_layer(self.dep_embeddings([[edge[2]]]))\n",
-    "            dir_embed = self.dropout_layer(self.dir_embeddings([[edge[3]]]))\n",
-    "\n",
+    "            inputs = [torch.Tensor([[el]]) for el in edge]\n",
+    "            word_embed = self.dropout_layer(self.word_embeddings(inputs[0]))\n",
+    "            pos_embed = self.dropout_layer(self.pos_embeddings(inputs[1]))\n",
+    "            dep_embed = self.dropout_layer(self.dep_embeddings(inputs[2]))\n",
+    "            dir_embed = self.dropout_layer(self.dir_embeddings(inputs[3]))\n",
     "            embeds = np.concatenate((word_embed, pos_embed, dep_embed, dir_embed))\n",
     "            lstm_inp.append(embeds)\n",
     "        output, _ = self.lstm(lstm_inp)\n",
