--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,34 +340,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train\n",
-    "for el in x_train:\n",
-    "    if not el:\n",
-    "        el[NULL_PATH] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[2.]])"
+       "tensor([[0., 1., 2.],\n",
+       "        [0., 1., 2.],\n",
+       "        [0., 1., 2.]], grad_fn=<EmbeddingBackward>)"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.Tensor([[2]])"
+    "e(torch.LongTensor(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 1])"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.randn(3,1)\n",
+    "y = torch.randn(2,1)\n",
+    "torch.cat((x, y), 0).shape"
    ]
   },
   {
