Added xavier initializer

--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -340,46 +340,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0., 1., 2.],\n",
-       "        [0., 1., 2.],\n",
-       "        [0., 1., 2.]], grad_fn=<EmbeddingBackward>)"
+       "tensor([[1., 3., 4.]])"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "e(torch.LongTensor(3))"
+    "num_paths = [sum(list(paths.values())) for paths in data]\n",
+    "        print (\"Number of paths: \", num_paths)\n",
+    "        path_embeddings = np.array([np.sum([self.embed_path(path) for path in paths.items()]) for paths in data])\n",
+    "        #print (\"Path Embeddings: \", path_embeddings)\n",
+    "        \n",
+    "        h = np.divide(path_embeddings, num_paths)\n",
+    "        print (h.shape)\n",
+    "        h = [np.concatenate((self.word_embeddings(emb[0]), h[i], self.word_embeddings(emb[1]))) for i,emb in enumerate(emb_indexer)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1.2590, -1.1020, -2.6838]]) tensor([])\n",
+      "tensor([[ 1.2590, -1.1020, -2.6838]])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "torch.Size([5, 1])"
+       "tensor([[ 1.2590, -1.1020, -2.6838],\n",
+       "        [ 1.2590, -1.1020, -2.6838]])"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = torch.randn(3,1)\n",
-    "y = torch.randn(2,1)\n",
-    "torch.cat((x, y), 0).shape"
+    "x = torch.randn(3).view(1,-1)\n",
+    "y = torch.Tensor([])\n",
+    "print (x,y)\n",
+    "y = torch.cat((y, x), 0)\n",
+    "print (y)\n",
+    "torch.cat((y, x), 0)"
    ]
   },
   {
