Converted np to tensor for gradation

--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -367,36 +367,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 1.2590, -1.1020, -2.6838]]) tensor([])\n",
-      "tensor([[ 1.2590, -1.1020, -2.6838]])\n"
+     "ename": "TypeError",
+     "evalue": "new(): data must be a sequence (got float)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-225-820f93a5d993>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5.214\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: new(): data must be a sequence (got float)"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 1.2590, -1.1020, -2.6838],\n",
-       "        [ 1.2590, -1.1020, -2.6838]])"
-      ]
-     },
-     "execution_count": 218,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = torch.randn(3).view(1,-1)\n",
-    "y = torch.Tensor([])\n",
-    "print (x,y)\n",
-    "y = torch.cat((y, x), 0)\n",
-    "print (y)\n",
-    "torch.cat((y, x), 0)"
+    "torch.Tensor(5.214)"
    ]
   },
   {
