Fixed W dim bug

--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -367,23 +367,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "new(): data must be a sequence (got float)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-225-820f93a5d993>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5.214\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: new(): data must be a sequence (got float)"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0662],\n",
+       "        [ 0.1276],\n",
+       "        [ 1.2875],\n",
+       "        [-1.0066]])"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.Tensor(5.214)"
+    "t = torch.randn(1,1)\n",
+    "torch.cat((t, path_embedding_cat.view(1,-1)), 0)"
    ]
   },
   {
