--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -389,22 +389,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[0.]])"
-      ]
-     },
-     "execution_count": 231,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.5777, grad_fn=<NllLossBackward>) tensor([[ 1.1562, -0.1242,  0.1812,  0.3042,  0.9188],\n",
+      "        [ 1.0961,  1.5061,  0.4816, -0.1618, -1.0943],\n",
+      "        [ 0.8229,  0.5431, -0.4848,  1.8109, -0.8246]], requires_grad=True) tensor([4, 2, 0])\n"
+     ]
     }
    ],
    "source": [
-    "torch.Tensor([[0]])"
+    "loss = nn.CrossEntropyLoss()\n",
+    "inputt = torch.randn(3, 5, requires_grad=True)\n",
+    "target = torch.empty(3, dtype=torch.long).random_(5)\n",
+    "output = loss(inputt, target)\n",
+    "output.backward()\n",
+    "print (output, inputt, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1.4359,  1.2739, -0.3967,  0.7530, -0.3940],\n",
+      "        [ 0.4904, -0.4296,  0.6100, -0.3087, -0.4050],\n",
+      "        [-3.1990, -0.2206,  0.4660, -0.0757,  0.0652]], requires_grad=True) tensor([1, 0, 4]) tensor(1.2629, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = nn.LogSoftmax(dim=1)\n",
+    "loss = nn.NLLLoss()\n",
+    "# input is of size N x C = 3 x 5\n",
+    "inputt = torch.randn(3, 5, requires_grad=True)\n",
+    "# each element in target has to have 0 <= value < C\n",
+    "target = torch.tensor([1, 0, 4])\n",
+    "output = loss(m(inputt), target)\n",
+    "output.backward()\n",
+    "print (inputt, target, output)"
    ]
   },
   {
