--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -440,10 +440,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-2.])"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-1 * torch.Tensor([2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tp"
+   ]
   }
  ],
  "metadata": {
