replaced gawk with sort for mem error

--- a/OntoEnricher/src/corpus_parser.ipynb
+++ b/OntoEnricher/src/corpus_parser.ipynb
@@ -2,23 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bsddb3 import btopen\n",
-    "import bcolz, pickle\n",
+    "import bcolz, pickle, os, shelve\n",
     "import numpy as np\n",
     "from math import ceil\n",
     "from itertools import count\n",
     "from collections import defaultdict\n",
+    "from difflib import SequenceMatcher\n",
+    "import tensorflow as tf\n",
+    "import tensorflow_hub as hub\n",
+    "from scipy import spatial\n",
     "\n",
-    "prefix = \"../junk/Files/temp_threshold_3_4/temp\"\n",
+    "prefix = \"/data/Vivek/pizza\"\n",
     "train_file = \"../files/dataset/train.tsv\"\n",
     "test_file = \"../files/dataset/test.tsv\"\n",
     "output_folder = \"../junk/Output/\"\n",
     "embeddings_folder = \"../junk/Glove.dat\"\n",
-    "embeddings_file = \"/Users/vivek/SIREN-Research/Archive-LSTM/glove.6B/glove.6B.300d.txt\"\n",
+    "USE_folder = \"/home/vlead/USE\"\n",
+    "embeddings_file = \"/data/Vivek/glove.6B.300d.txt\"\n",
+    "use_embeddings = \"../files/embeddings.pt\"\n",
     "\n",
     "POS_DIM = 4\n",
     "DEP_DIM = 5\n",
@@ -32,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +69,7 @@
     "\n",
     "        embeddings = vectors\n",
     "    except:\n",
-    "        embeddings = create_embeddings()\n",
+    "        embeddings, word2idx = create_embeddings()\n",
     "    return embeddings, word2idx\n",
     "        \n",
     "\n",
@@ -91,11 +97,11 @@
     "    \n",
     "    return vectors, word2idx\n",
     "\n",
-    "word2id_db = btopen(prefix + \"_word_to_id.db\", \"r\")\n",
-    "id2word_db = btopen(prefix + \"_id_to_word.db\", \"r\")\n",
-    "path2id_db = btopen(prefix + \"_path_to_id.db\", \"r\")\n",
-    "id2path_db = btopen(prefix + \"_id_to_path.db\", \"r\")\n",
-    "relations_db = btopen(prefix + \"_word_occurence_map.db\", \"r\")\n",
+    "word2id_db = shelve.open(prefix + \"_term_to_id.db\", 'r')\n",
+    "id2word_db = shelve.open(prefix + \"_id_to_term.db\", \"r\")\n",
+    "path2id_db = shelve.open(prefix + \"_path_to_id.db\", \"r\")\n",
+    "id2path_db = shelve.open(prefix + \"_id_to_path.db\", \"r\")\n",
+    "relations_db = shelve.open(prefix + \"_l2r.db\", \"r\")\n",
     "\n",
     "embeddings, emb_indexer = load_embeddings_from_disk()\n",
     "\n",
@@ -106,17 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pairs without paths: 95987 , all dataset: 95987\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "arrow_heads = {\">\": \"up\", \"<\":\"down\"}\n",
     "\n",
@@ -168,12 +166,12 @@
     "dataset_keys = list(train_dataset.keys()) + list(test_dataset.keys())\n",
     "dataset_vals = list(train_dataset.values()) + list(test_dataset.values())\n",
     "\n",
-    "embed_indices, x = parse_dataset(dataset_keys)\n",
-    "y = [i for (i,relation) in enumerate(dataset_vals)]\n",
+    "# embed_indices, x = parse_dataset(dataset_keys)\n",
+    "# y = [i for (i,relation) in enumerate(dataset_vals)]\n",
     "\n",
-    "embed_indices_train, embed_indices_test = np.array(embed_indices[:len(train_dataset)]), np.array(embed_indices[len(train_dataset):len(train_dataset)+len(test_dataset)])\n",
-    "x_train, x_test = np.array(x[:len(train_dataset)]), np.array(x[len(train_dataset):len(train_dataset)+len(test_dataset)])\n",
-    "y_train, y_test = np.array(y[:len(train_dataset)]), np.array(y[len(train_dataset):len(train_dataset)+len(test_dataset)])"
+    "# embed_indices_train, embed_indices_test = np.array(embed_indices[:len(train_dataset)]), np.array(embed_indices[len(train_dataset):len(train_dataset)+len(test_dataset)])\n",
+    "# x_train, x_test = np.array(x[:len(train_dataset)]), np.array(x[len(train_dataset):len(train_dataset)+len(test_dataset)])\n",
+    "# y_train, y_test = np.array(y[:len(train_dataset)]), np.array(y[len(train_dataset):len(train_dataset)+len(test_dataset)])"
    ]
   },
   {
@@ -413,49 +411,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 1.4359,  1.2739, -0.3967,  0.7530, -0.3940],\n",
-      "        [ 0.4904, -0.4296,  0.6100, -0.3087, -0.4050],\n",
-      "        [-3.1990, -0.2206,  0.4660, -0.0757,  0.0652]], requires_grad=True) tensor([1, 0, 4]) tensor(1.2629, grad_fn=<NllLossBackward>)\n"
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0-:--:-- --:--:-- --:--:--     0\n",
+      "./\n",
+      "./assets/\n",
+      "./variables/\n",
+      "./variables/variables.index\n",
+      "./variables/variables.data-00000-of-00001\n",
+      " 96  523M   96  506M    0     0  33.8M      0  0:00:15  0:00:14  0:00:01 44.5M./saved_model.pb\n",
+      "100  523M  100  523M    0     0  34.1M      0  0:00:15  0:00:15 --:--:-- 44.9M\n",
+      "WARNING:tensorflow:From /home/vlead/.local/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "Obtained list of words\n"
      ]
     }
    ],
    "source": [
-    "m = nn.LogSoftmax(dim=1)\n",
-    "loss = nn.NLLLoss()\n",
-    "# input is of size N x C = 3 x 5\n",
-    "inputt = torch.randn(3, 5, requires_grad=True)\n",
-    "# each element in target has to have 0 <= value < C\n",
-    "target = torch.tensor([1, 0, 4])\n",
-    "output = loss(m(inputt), target)\n",
-    "output.backward()\n",
-    "print (inputt, target, output)"
+    "word = \"margherita pizza\" \n",
+    "\n",
+    "def extractUSEEmbeddings(words):\n",
+    "    try:\n",
+    "        embed = hub.KerasLayer(USE_folder)\n",
+    "    except:\n",
+    "        !mkdir $USE_folder\n",
+    "        !curl -L \"https://tfhub.dev/google/universal-sentence-encoder-large/5?tf-hub-format=compressed\" | tar -zxvC $USE_folder\n",
+    "        embed = hub.KerasLayer(USE_folder)\n",
+    "        pass\n",
+    "    tf.logging.set_verbosity(tf.logging.ERROR)\n",
+    "    with tf.Session() as session:\n",
+    "        session.run([tf.global_variables_initializer(), tf.tables_initializer()])\n",
+    "        word_embeddings = session.run(embed(words))\n",
+    "    return word_embeddings\n",
+    "\n",
+    "def compare_sim(words, word_to_compare, max_sim=-1000):\n",
+    "    word_embeddings = extractUSEEmbeddings(words)\n",
+    "    closest_word = \"\"\n",
+    "    with shelve.open(use_embeddings, 'c') as db:\n",
+    "        for i, w in enumerate(word_embeddings):\n",
+    "            db[words[i]] = \" \".join([str(s) for s in w])\n",
+    "            sim = 1 - spatial.distance.cosine(word_to_compare, w)\n",
+    "            if sim > max_sim:\n",
+    "                max_sim, closest_word = sim, words[i]\n",
+    "        del word_embeddings\n",
+    "    return closest_word, max_sim\n",
+    "\n",
+    "def closestWord(word, method=\"USE\"):\n",
+    "    word_to_compare = extractUSEEmbeddings([word])\n",
+    "    if os.path.isfile(use_embeddings):\n",
+    "        with shelve.open(use_embeddings, 'r') as db:\n",
+    "            max_sim, closest_word = -1000, \"\"\n",
+    "            for w,e in word2id_db.items():\n",
+    "                emb = np.array([float(l) for l in e.decode(\"utf-8\").split()])\n",
+    "                sim = 1 - spatial.distance.cosine(word_to_compare, emb)\n",
+    "                if sim > max_sim:\n",
+    "                    max_sim, closest_word = sim, w\n",
+    "    else:\n",
+    "        words = list(word2id_db.keys())\n",
+    "        print (\"Obtained list of words\")\n",
+    "        len_part = 100000\n",
+    "        max_sim = -1000\n",
+    "        n_parts = ceil(len(words)/len_part)\n",
+    "        for i in range(n_parts):\n",
+    "            words_part = words[i*len_part:(i+1)*len_part]\n",
+    "            closest_word, max_sim = compare_sim(words_part, word_to_compare, max_sim)\n",
+    "\n",
+    "    del db\n",
+    "    return closest_word, max_sim\n",
+    "    \n",
+    "closest_word = closestWord(word)\n",
+    "closest_word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([-2.])"
-      ]
-     },
-     "execution_count": 237,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘/home/Vivek/USE’: No such file or directory\r\n"
+     ]
     }
    ],
    "source": [
-    "-1 * torch.Tensor([2])"
+    "!mkdir /home/Vivek/USE"
    ]
   },
   {
@@ -484,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
